# CNES

./: .clangd  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
shaders/: nes.frag  nes.vert
src/: apu.c  apu.h  cart.c  cart.h  cpu.c  cpu.h  gui.c  gui.h  input.c  input.h  main.c  mapper.c  mapper.h  nes.c  nes.h  ppu.c  ppu.h
src/mapper/: 000.c  001.c  002.c  004.c  007.c
src/mappers/: 000.c  001.c  002.c  003.c  004.c  007.c  009.c  079.c  148.c
